--- a/trabajos/bultacomercurio.html
+++ b/trabajos/bultacomercurio.html
@@ -62,6 +62,13 @@
 							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/10.JPG" /></a></div>
 							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/11.JPG" /></a></div>
 							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/12.JPG" /></a></div>
+							<p> Limpieza del codo de escape usando salfumat para quitar todo resto de carbonilla. </p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/13.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/14.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/15.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/16.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/17.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/18.JPG" /></a></div>
 							</section>
 					</div>
 
