--- a/trabajos/bultacomercurio.html
+++ b/trabajos/bultacomercurio.html
@@ -69,6 +69,113 @@
 							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/16.JPG" /></a></div>
 							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/17.JPG" /></a></div>
 							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/18.JPG" /></a></div>
+							<p> Arreglos en el codo del escape y silencioso. Para ello, primero quitamos todo el óxido para poder ver bien los arreglos necesarios.
+							Después usamos una masilla de juntas de escape que se endurece con el calor, y reparamos todos los bollos. No importa que quede abultado, porque una vez seco
+							lijaremos como si fuese una chapa de carrocería. Después aplicamos el lijado para dejar perfecta la superficie. En algunos caso, tengo que volver a enmasillar, porque al no ser una masilla uniforme,
+							(lleva como unas fibras) se quedan pequeños huecos que hace que se note la reparación al pintar. Una vez completo (me llevó 4 veces enmasillar todo para que quedase relleno), después de lijar tengo la
+							superficie preparada para pintar con pintura anticalórica. Siguiendo el modelo original de 1962, se pinta el codo de metal, y el silencioso de negro.</p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/19.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/20.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/21.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/22.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/23.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/24.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/25.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/26.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/27.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/28.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/29.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/30.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/31.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/32.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/33.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/34.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/35.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/36.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/37.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/38.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/39.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/40.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/41.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/42.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/43.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/44.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/45.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/46.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/47.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/48.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/49.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/50.JPG" /></a></div>
+							<p> Una vez terminado el escape que es lo más complicado a nivel espacio, nos ponemos a desarmar el resto de componentes, con la idea de empezar haciendo el motor y todas sus derivadas, para poder probar si funciona
+							y así poder valorar el coste de los componentes más caros los primeros. Por lo que se ve, el resto de chapa, chasis y horquillas, no parecen estar demasiado mal, aunque con las ruedas se nos irá bastante dinero en esa fase.
+							Sin embargo estoy bastante preocupado por la parte del motor, porque al no tener palanca, ni los platinos, no se pudo arrancar y todavía no sé a ciencia cierta lo que he comprado.
+							Por lo tanto empezamos con el desmontaje de casi toda la moto, salvo chasis, ruedas y horquillas. Esa parte la haremos una vez comprobado el motor y restaurado en caso de que funcione.
+							Primero empezamos con el deposito y verificamos que no tiene óxido por dentro con la cámara endoscópica:</p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/51.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/52.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/53.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/54.JPG" /></a></div>
+							<p> Continuamos desmontando, asiento, guardabarros, manillar, etc. Todo lo que no es motor, ruedas y horquillas. Al desmontar el asiento encontramos el número de serie, aunque ya sabía que se
+							encontraba ahí después de leer el manual del despiece de la moto. Por otro lado el guardabarros delantero cuesta mucho más sacarlo poruqe hay tornillos totalmente soldados y oxidados, y al intentar aflojarlos parten.</p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/55.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/56.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/57.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/58.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/59.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/60.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/61.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/62.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/63.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/64.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/65.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/66.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/67.JPG" /></a></div>
+							<p> Desmontamos la cadena, y posteriormente el motor. Al desmontar el motor, me doy cuenta que el buje de la pata de arranque está partido, no están las piezas del embrague ni tampoco la tapa de arranque. </p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/68.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/69.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/70.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/71.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/72.JPG" /></a></div>
+							<p> Empezamos limpiando la cadena que es algo rápido y podemos ir quitando componentes de la lista. Empezamos con desengrasante, y como siempre una vez limpia, la bañamos en aceite de motor 5W40 para que se engrase y no se oxide.
+							Después la escurrimos bien, y la guardamos en una bolsa hermética para que no se oxide. Ya tenemos una cosa lista.</p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/73.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/74.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/75.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/76.jpg" /></a></div>
+							<p> Despues de la cadena nos ponemos con el carburador. Empezamos con el filtro del aire. Lo limpiamos con agua y jabón, y después lo dejamos secar al aire. En cuanto a la chapa, quitamos óxido y la pulimos con una lija de agua de 800, y después con una de 1200.</p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/77.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/78.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/79.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/80.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/81.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/82.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/83.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/84.jpg" /></a></div>
+							<p> Desmontamos todas las piezas del carburador, chiclés, aguja, etc. Limpiamos con gasolina y aire comprimido.</p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/85.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/86.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/87.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/88.jpg" /></a></div>
+							<p> Al montar me doy cuenta que el carburador no tiene flotador :( Por lo que toca pedir un carburador de repuesto y poder terminarlo después.
+							Desmontamos culata y nos ponemos a limpiar toda la carbonilla con desengrasante calentando la mezcla con vinagre. Lo dejamos unas horas y repetimos el proceso hasta que queda sin óxido y carbonilla.</p>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/89.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/90.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/91.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/92.JPG" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/93.jpg" /></a></div>
+							<div class="image main"><a class="image main"><img src="../images/bultaco-mercurio/94.jpg" /></a></div>
+							<p> Continuará...</p>
+
+
+
+
+
+
+
+
+
+
+
 							</section>
 					</div>
 
