Add themed background and footer social icons

--- a/trabajos/minimoto2024.html
+++ b/trabajos/minimoto2024.html
@@ -14,6 +14,7 @@
 		<meta name="author" content="homeautorestorer">
 		<link rel="canonical" href="https://restorer.amorgante.es" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/theme.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 		<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
 	</head>
@@ -34,9 +35,10 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.youtube.com/@Homeautorestorer" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+							<li><a href="https://www.instagram.com/homeautorestorer" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="mailto: homeautorestorer@gmail.com" class="icon brands fa-mailchimp"><span class="label">Email</span></a></li>
+							<li><a href="mailto: homeautorestorer@gmail.com" class="icon solid fa-at"><span class="label">Email</span></a></li>
 						</ul>
 					</nav>
 
@@ -267,6 +269,20 @@
 						</section>
 					</footer>
 				-->
+				<!-- Footer -->
+				<footer id="footer">
+					<section class="split contact">
+						<section>
+							<h3>Redes</h3>
+							<ul class="icons alt">
+								<li><a href="https://www.youtube.com/@Homeautorestorer" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+								<li><a href="https://www.instagram.com/homeautorestorer" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="mailto: homeautorestorer@gmail.com" class="icon solid fa-at"><span class="label">Email</span></a></li>
+							</ul>
+						</section>
+					</section>
+				</footer>
+
 				<!-- Copyright -->
 				<div id="copyright">
 					<ul><li>&copy;2024 - Home Auto Restorer - <a href="../politica-privacidad.html">Política de privacidad y cookies</a></li></ul>
