Update theme background fill and favicon

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Últimos trabajos</span>
-									<h2><a href="trabajos/minimoto-blata.html">Minimoto Blata 2025<br />
-										Restauración de esta bestia que necesita una segunda vida</a></h2>
+									<h2><a href="trabajos/bultacomercurio.html">Bultaco Mercurio 125<br />
+										Restauración completa de este clásico de las motos</a></h2>
 								</header>
-								<a href="trabajos/minimoto-blata.html" class="image main"><img src="images/minimoto-blata/befunky-blata.jpg" alt="minimoto-blata" /></a>
+								<a href="trabajos/bultacomercurio.html" class="image main"><img src="images/bultaco-mercurio/befunky-bultaco.jpg" alt="bultaco-mercurio" /></a>
 								<ul class="actions special">
-									<li><a href="trabajos/minimoto-blata.html" class="button large">Ver proceso</a></li>
+									<li><a href="trabajos/bultacomercurio.html" class="button large">Ver proceso</a></li>
 								</ul>
 							</article>
 
